@@ -20,6 +20,7 @@ NEWS
   * Fixed fix for round-robin in mod_proxy (forgot to increment the index) (#1715)
   * Fix fastcgi-authorizer handling; Status: 200 is now accepted as the doc requests
   * Compare address family in inet_ntop_cache
+  * Revert CVE-2008-4359 (#1720) fix "encoding+simplifying urls for rewrite/redirect": too many regressions.
 
 - 1.4.20 - 2008-09-30
 
@@ -67,7 +68,7 @@ NEWS
   * allow digits in [s]cgi env vars (#1712)
   * fixed dropping last character of evhost pattern (#161)
   * print helpful error message on conditionals in global block (#1550)
-  * decode url before matching in mod_rewrite (#1720)
+  * decode url before matching in mod_rewrite (#1720) -- (reverted for 1.4.21)
   * fixed conditional patching of ldap filter (#1564)
   * Match headers case insensitive in response (removing of X-{Sendfile,LIGHTTPD-*}, catching Date/Server) [2281]
   * fixed bug with case-insensitive filenames in mod_userdir (#1589), spotted by "anders1" (CVE-2008-4360)
@@ -82,7 +83,7 @@ NEWS
   * fix auth.backend.ldap.bind-dn/pw problems (only read from global context for temporary ldap reconnects, thx ruskie)
   * fix memleak in request header parsing (#1774, thx qhy) (CVE-2008-4298)
   * fix mod_rewrite memleak/endless loop detection (#1775, thx phy - again!)
-  * use decoded url for matching in mod_redirect (#1720) (CVE-2008-4359)
+  * use decoded url for matching in mod_redirect (#1720) (CVE-2008-4359) -- (reverted for 1.4.21)
 
 - 1.4.19 - 2008-03-10
 
